<?xml version="1.0"?>
<package format="3">
  <name>cannyedge_test1</name>
  <version>0.0.0</version>
  <description>
    ROS2 package for Canny edge detection with custom hole detection.
    This package uses a custom message (HoleInfo.msg) to deliver hole (opening)
    detection results to the planning team.
  </description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <!-- Build tool dependency -->
  <buildtool_depend>ament_python</buildtool_depend>
  
  <!-- Build dependencies for custom message generation -->
  <build_depend>rosidl_default_generators</build_depend>
  
  <!-- Execution dependencies -->
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>cannyedge_test1_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

