<?xml version="1.0"?>
<package format="3">
  <name>offboard_pkg</name>
  <version>0.0.0</version>
  <description>Offboard Control Package</description>
  <maintainer email="nori@example.com">nori</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>px4_msgs</depend>
  <depend>cannyedge_test1_interfaces</depend>
  
  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>