<?xml version="1.0"?>
<package format="3">
  <name>realsense_edge_detection</name>
  <version>0.1.0</version>
  <description>ROS2 node for edge detection using Intel RealSense camera</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>pyrealsense2</exec_depend>
  <exec_depend>opencv-python</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

