<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>window_detection_package</name>
  <version>0.0.0</version>
  <description>Window detection package for drone mission.</description>
  <maintainer email="jungwoo@todo.todo">jungwoo</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>numpy</depend>
  <depend>open3d</depend>
  <depend>sensor_msgs_py</depend>
  <depend>cannyedge_test1_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>